--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -76,8 +76,8 @@
                     <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png"
                          alt="image">
 
-                    <div class="bio mb-3">Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also
-                        provide a link to the about page.<br><a href="about.html">Find out more about me</a></div>
+                    <div class="bio mb-3">Hi, my name is ai cũng biết 😂😂
+                        .<br><a href="about.html">Find out more about me</a></div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
                         <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
