--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
-    <title>Bootstrap 4 Blog Template For Developers</title>
+    <title>Web for fun 😂😂</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -77,7 +77,7 @@
                          alt="image">
 
                     <div class="bio mb-3">Hi, my name is ai cũng biết 😂😂
-                        .<br><a href="about.html">Find out more about me</a></div>
+                        <br><a href="about.html">Find out more about me</a></div>
                     <!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
                         <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
