--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -137,15 +137,19 @@
     </div>
     <div class="col-9 pl-0">
         <div class="container-fluid">
-
             <!--thêm todo-->
             <div class="row">
                 <div class="card ml-0 mt-2 mr-2 w-100">
                     <form action="/" method="post">
-                    <div class="card-header">
+                    <div class="card-header p-2">
                         <div class="row">
-                            <div class="col">
-                                <div class="card-title">Featured</div>
+                            <div class="col m-0">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1">Title</span>
+                                    </div>
+                                    <input type="text" name="title" class="form-control" placeholder="Input here" aria-label="Username" aria-describedby="basic-addon1">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -178,11 +182,11 @@
             <!--các todo-->
             <div class="row">
                 <div class="card-columns mt-2 mr-2">
-                    <div class="card">
+                    <div class="card" th:each="post:${posts}">
                         <div class="card-header" style="border-color: #ffffff00; background-color: #ffffff00">
                             <div class="row">
                                 <div class="col-10">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title" th:text="${post.getTitle()}"></h5>
                                 </div>
                                 <div class="col-2">
                                     <svg class="bi bi-star-fill text-warning" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -192,8 +196,7 @@
                             </div>
                         </div>
                         <div class="card-body pt-0">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text" th:text="${post.getContent()}"></p>
                         </div>
                         <div class="card-footer">
                             <div class="row">
@@ -209,38 +212,6 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                 </div>
