--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -201,13 +201,33 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col-9">
-                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                    <div class="row pl-2">
+                                        <div class="col-4">
+                                            <p>From:</p>
+                                        </div>
+                                        <div class="col-8">
+                                            <small class="text-muted" th:text="${post.getStartDate()}"></small>
+                                        </div>
+                                    </div>
+                                    <div class="row pl-2">
+                                        <div class="col-4">
+                                            <p>To:</p>
+                                        </div>
+                                        <div class="col-8">
+                                            <small class="text-muted" th:text="${post.getEndDate()}"></small>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-2">
-                                    <a href="#" style="border-color: #ffffff00; background-color: #ffffff00" class="btn btn-primary rounded-pill">
+                                <div class="col-2" th:switch="${post.getStatus()}">
+                                    <a th:case="1" th:href="'/api/change/undone/?id='+${post.getId()}" style="border-color: #ffffff00; background-color: #ffffff00" class="btn btn-primary rounded-pill changeNotDone">
                                         <svg class="bi bi-bookmark-check text-warning" width="25px" height="25px" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" d="M4.5 2a.5.5 0 0 0-.5.5v11.066l4-2.667 4 2.667V8.5a.5.5 0 0 1 1 0v6.934l-5-3.333-5 3.333V2.5A1.5 1.5 0 0 1 4.5 1h4a.5.5 0 0 1 0 1h-4z"/>
                                             <path fill-rule="evenodd" d="M15.854 2.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 4.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                                        </svg>
+                                    </a>
+                                    <a th:case="0" th:href="'/api/change/done/?id='+${post.getId()}" style="border-color: #ffffff00; background-color: #ffffff00" class="btn btn-primary rounded-pill">
+                                        <svg class="bi bi-bookmark-check text-success" width="25px" height="25px" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" d="M3 3a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12l-5-3-5 3V3z"/>
                                         </svg>
                                     </a>
                                 </div>
@@ -228,7 +248,6 @@
 
 <!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
 <script src="js/demo/style-switcher.js"></script>
-
 
 </body>
 
