--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label for="exampleInputUser">Username</label>
                 <input type="text" name="username" class="form-control" id="exampleInputUser" aria-describedby="emailHelp" placeholder="Username">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your information with anyone else.</small>
+                <small id="emailHelp" href="/register" class="form-text text-muted">We'll never share your information with anyone else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
