--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,16 +8,17 @@
     <link id="theme" rel="stylesheet" th:href="@{/assets/css/bootstrap.min.css}">
     <!--    <link id="theme-style" rel="stylesheet" th:href="@{/assets/css/theme-1.css}">-->
     <script th:src="@{/assets/js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/assets/js/validate.min.js}"></script>
 </head>
 <body>
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
-        <form class="col-lg-5 border rounded shadow p-4 mt-5" th:action="@{/login}" method="post">
+        <form class="col-lg-5 border rounded shadow p-4 mt-5" id="formRegister" th:action="@{/login}" method="post">
             <img src="assets/images/logo.jpg" class="rounded-circle mx-auto d-block mb-3" alt="...">
             <div class="form-group">
                 <label for="exampleInputUser">Username</label>
                 <input type="text" name="username" class="form-control" id="exampleInputUser" aria-describedby="emailHelp" placeholder="Username">
-                <small id="emailHelp" href="/register" class="form-text text-muted">Không thông ti lộ gì đâu, đừng sợ :)).</small>
+                <small id="emailHelp" href="/register" class="form-text text-muted">Không lộ thông tin gì đâu, đừng sợ :)).</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
@@ -31,4 +32,20 @@
     </div>
 </div>
 </body>
+<script>
+    $('#formRegister').validate({
+        rule: {
+            username: {
+                required: true,
+                minlength: 2,
+                maxlength: 50
+            },
+            password: {
+                required: true,
+                minlength: 8,
+                maxlength: 50
+            }
+        }
+    })
+</script>
 </html>
