sắp xong login và register

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
-    <title>Error</title>
+    <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link id="theme" rel="stylesheet" th:href="@{/assets/css/bootstrap.min.css}">
     <!--    <link id="theme-style" rel="stylesheet" th:href="@{/assets/css/theme-1.css}">-->
@@ -25,7 +25,7 @@
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div class="form-check mb-3 pl-0">
-                <a href="/register">Register</a>
+                <a href="/register">Chưa có tài khoản, đăng kí tại đây</a>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
