--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -89,6 +89,36 @@
                         <label for="day">Day</label>
                         <select id="day" class="form-control">
                             <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                            <option>6</option>
+                            <option>7</option>
+                            <option>8</option>
+                            <option>9</option>
+                            <option>10</option>
+                            <option>11</option>
+                            <option>12</option>
+                            <option>13</option>
+                            <option>14</option>
+                            <option>15</option>
+                            <option>16</option>
+                            <option>17</option>
+                            <option>18</option>
+                            <option>19</option>
+                            <option>20</option>
+                            <option>21</option>
+                            <option>22</option>
+                            <option>23</option>
+                            <option>24</option>
+                            <option>25</option>
+                            <option>26</option>
+                            <option>27</option>
+                            <option>28</option>
+                            <option>29</option>
+                            <option>30</option>
+                            <option>31</option>
                         </select>
                     </div>
                 </div>
@@ -97,6 +127,17 @@
                         <label for="day">Month</label>
                         <select id="month" class="form-control">
                             <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                            <option>6</option>
+                            <option>7</option>
+                            <option>8</option>
+                            <option>9</option>
+                            <option>10</option>
+                            <option>11</option>
+                            <option>12</option>
                         </select>
                     </div>
                 </div>
@@ -110,7 +151,7 @@
             <div class="form-check mb-3 pl-0">
                 <a href="/login">Đã có tài khoản, đăng nhập tại đây</a>
             </div>
-            <button type="submit" id="button" class="btn btn-primary mt-0">Login</button>
+            <button type="submit" id="button" class="btn btn-primary mt-0">Register</button>
         </form>
     </div>
 </div>
