--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,18 +6,31 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link id="theme" rel="stylesheet" th:href="@{/assets/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--    <link id="theme-style" rel="stylesheet" th:href="@{/assets/css/theme-1.css}">-->
     <script th:src="@{/assets/js/jquery-3.5.1.min.js}"></script>
-    <script th:src="@{/assets/js/validate.min.js}"></script>
+    <script th:src="@{/assets/js/validate.min.js}" type="text/javascript"></script>
+    <style>
+        #button{
+            width: 100%;
+            margin-top: 10px;
+        }
+        .error{
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <div class="container h-100">
     <div class="row h-100 justify-content-center align-items-center">
         <form class="col-lg-5 border rounded shadow p-4 mt-5" id="formLogin" th:action="@{/login}" method="post">
             <img src="assets/images/logo.jpg" class="rounded-circle mx-auto d-block mb-3" alt="...">
+            <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                Thông tin đăng nhập không chính xác!
+            </div>
             <div class="form-group">
                 <label for="exampleInputUser">Username</label>
-                <input type="text" name="username" class="form-control" id="exampleInputUser" aria-describedby="emailHelp" placeholder="Username">
+                <input type="text" name="username" class="form-control" id="exampleInputUser" placeholder="Username">
                 <small id="emailHelp" href="/register" class="form-text text-muted">Không lộ thông tin gì đâu, đừng sợ :)).</small>
             </div>
             <div class="form-group">
@@ -25,13 +38,18 @@
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div class="form-check mb-3 pl-0">
+                <a href="https://www.facebook.com/dialog/oauth?client_id=206735400384185&redirect_uri=https://localhost:5000/oath" class="btn btn-primary mr-1" role="button">
+                    <div class="row" style="width: 85px; padding-left: 12px"><i style="font-size: 22px" class="fa fa-facebook-official mr-2"></i> Login</div>
+                </a>
                 <a href="/register">Chưa có tài khoản, đăng kí tại đây</a>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" id="button" class="btn btn-primary">Login</button>
         </form>
     </div>
 </div>
 </body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v7.0&appId=206735400384185&autoLogAppEvents=1" nonce="3SIf9IvN"></script>
 <script>
     $('#formLogin').validate({
         rule: {
@@ -48,4 +66,28 @@
         }
     })
 </script>
+
+
+<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : '{your-app-id}',
+            cookie     : true,
+            xfbml      : true,
+            version    : '{api-version}'
+        });
+
+        FB.AppEvents.logPageView();
+
+    };
+
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+
 </html>
