fix đăng nhập FB trên host

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,7 +38,7 @@
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <div class="form-check mb-3 pl-0">
-                <a href="https://www.facebook.com/dialog/oauth?client_id=206735400384185&redirect_uri=https://localhost:5000/oath" class="btn btn-primary mr-1" role="button">
+                <a href="https://www.facebook.com/dialog/oauth?client_id=206735400384185&redirect_uri=https://serverforfun.herokuapp.com/oath" class="btn btn-primary mr-1" role="button">
                     <div class="row" style="width: 85px; padding-left: 12px"><i style="font-size: 22px" class="fa fa-facebook-official mr-2"></i> Login</div>
                 </a>
                 <a href="/register">Chưa có tài khoản, đăng kí tại đây</a>
